--- a/Style/style.css
+++ b/Style/style.css
@@ -87,42 +87,48 @@ header{
         
         font-weight: bold;
     }
-    .a1{
-        position: relative;
+    .a0
+    {
+position: relative;
         top: 3px;
-        left: 30px;
+        left: 23px;
         color: rgb(136, 68, 126);
+    }
+    .a1{
+       position: relative;
+        top:3px;
+        left: 33px;
+        color: rgb(136, 68, 126);  
     }
     .a2
     {
-        position: relative;
+       position: relative;
         top:3px;
-        left: 20px;
-        color: rgb(136, 68, 126);
+        left: 22px;
     }
     .a3
     {
-        position: relative;
+       position: relative;
         top:3px;
-        left: 30px;
+        left:30px  
     }
     .a4
     {
         position: relative;
         top:3px;
-        left:10px
+        left:10px 
     }
     .a5
     {
-        position: relative;
+       position: relative;
         top:3px;
-        left:23px 
+        left:24px  
     }
     .a6
     {
-        position: relative;
+     position: relative;
         top:3px;
-        left:28px 
+        left:28px   
     }
     .a7
     {
@@ -130,45 +136,46 @@ header{
         top:3px;
         left:12px 
     }
-    .button1{
-        position: relative;
+    .button
+    {
+      position: relative;
         top: 8px;
         left: 0px;
         margin-left: 10px;
         background-color: rgb(242, 203, 236);
         border-style: solid;
         border-width: 2px;
-        border-color: saddlebrown;
+        border-color: saddlebrown;  
     }
-    .button2{
-        position: relative;
+    .button1{
+       position: relative;
         top: -25px;
         left: 140px;
         margin-left: 10px;
         background-color: rgb(242, 203, 236);
         border-style: solid;
         border-width: 2px;
-        border-color: saddlebrown;
+        border-color: saddlebrown; 
     }
-    .button3{
-        position: relative;
+    .button2{
+    position: relative;
         top: -58px;
         left: 280px;
         margin-left: 10px;
         border-style: solid;
         border-width: 2px;
-        border-color: saddlebrown;
+        border-color: saddlebrown;     
     }
-    .button4{
-        position: relative;
+    .button3{
+       position: relative;
         top: -91px;
         left: 420px;
         margin-left: 10px;
         border-style: solid;
         border-width: 2px;
         border-color: saddlebrown;
-    } 
-    .button5{
+    }
+    .button4{
         position: relative;
         top: -123px;
         left: 560px;
@@ -177,23 +184,32 @@ header{
         border-width: 2px;
         border-color: saddlebrown;
     } 
-    .button6{
+    .button5{
         position: relative;
-        top: -158px;
-        left: 1235px;
+        top: -156px;
+        left: 700px;
         margin-left: 10px;
         border-style: solid;
         border-width: 2px;
         border-color: saddlebrown;
     } 
-    .button7{
-        position: relative;
+    .button6{
+      position: relative;
         top: -191px;
-        left: 1375px;
+        left: 1200px;
         margin-left: 10px;
         border-style: solid;
         border-width: 2px;
-        border-color: saddlebrown;
+        border-color: saddlebrown;  
+    } 
+    .button7{
+      position: relative;
+        top: -225px;
+        left: 1345px;
+        margin-left: 10px;
+        border-style: solid;
+        border-width: 2px;
+        border-color: saddlebrown;   
     } 
 }
 .main
@@ -423,7 +439,7 @@ header{
     {
         position: relative;
         top: 10px;
-        left: 125px;
+        left: 0px;
         color: rgb(154, 82, 0);
     }
     .question1
@@ -440,14 +456,14 @@ header{
         background-color: white;
         border-radius: 10px;
         position: relative;
-        top: 0px;
+        top: -10px;
         left: 50px;
     }
     .rees
     {
         position: relative;
         top: 13px;
-        left: 150px;
+        left: 0px;
         font-size: 20px;
         color: rgb(154, 82, 0);
         font-weight: bold;
@@ -495,5 +511,71 @@ header{
         top: 650px;
         left: 10px;
     }
+    
 }
-
+.Prona
+    {
+        font-size: 24px;
+        color: rgb(154, 82, 0);
+        text-align: center;
+    }
+.man{
+    height: 325px;
+    width: 500px;
+    position: absolute;
+    top: 300px;
+    left: 500px;
+}
+.bub
+{
+    height: 50px;
+    width: 50px;
+    background-color: rgba(0, 0, 0, 0.728);
+    border-radius: 100%;
+    position: absolute;
+    top: 425px;
+    left: 725px;
+}
+.turk{
+width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom:25px solid rgba(255, 255, 255, 0.838);
+    rotate: 90deg;
+    position: absolute;
+    top: 437px;
+    left: 739px;
+}
+p
+{
+    font-size: 24px;
+        color: rgb(154, 82, 0);
+        text-align: center;
+}
+.prop{
+    position: relative;
+    top: 350px;
+}
+.prop1
+{
+    position: relative;
+    top: 350px;
+    left: 250px;
+    font-size: 24px;
+    color: rgb(154, 82, 0);
+}
+.prop2
+{
+    text-align: center;
+    position: relative;
+    top: 350px;
+    font-size: 24px;
+    color: rgb(154, 82, 0);
+}
+.prop3
+{
+    position: relative;
+    font-size: 24px;
+    color: rgb(154, 82, 0);
+}
