--- a/prem.css
+++ b/prem.css
@@ -13,6 +13,7 @@ body {
     align-items: center;
     font-size: 20px;
     border-bottom: 3px solid #c78e00;
+    text-decoration: none;
   }
   
   .icon {
